fix: remove start e end hour dos filtros combináveis referente ao endpoint findAll de alocações
